[wrapper-tracing] Fix tracing of WebGL2RenderingContextBase

We are not allowed to short-circuit tracing here (and actually nowhere) because
the rendering context can regain a context and at this point tracing is off,
i.e., the object is already black but members have not been traced.

We don't want black to white transitions in wrapper tracing, so just trace the
body of WebGL2RenderingContextBase unconditionally. The overhead should be
negligible.

BUG=chromium:678016
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2623513003
Cr-Commit-Position: refs/heads/master@{#442379}